infra/pre-deploy/manifests/prometheus/cilium-gateway-monitoring.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway-monitoring
  namespace: monitoring
  annotations:
    lbipam.cilium.io/ips: "192.168.31.10"  # Specify the desired IP
spec:
  gatewayClassName: cilium
  listeners:
  - protocol: HTTP
    port: 80
    name: http-gw
    allowedRoutes:
      namespaces:
        from: Same
